--- a/opdracht-1/index.html
+++ b/opdracht-1/index.html
@@ -19,7 +19,7 @@
             </nav>
         </header>
 
-        <img src="assets/header-image.jpg" alt="Tutti">
+        <img id="image1" src="assets/header-image.jpg" alt="Tutti">
 
         <main>
             <h1>Latest Articles</h1>
@@ -52,7 +52,7 @@
         </main>
 
         <footer>
-            <span>&copy;2020 Ciao Tutti Blog</span>
+            <span class="footer">&copy;2020 Ciao Tutti Blog</span>
         </footer>
     </div>
 </body>
